--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "firebase": "^9.6.1",
+    "firebase-admin": "^10.0.1",
     "jwt-decode": "^3.1.2",
     "npm": "^8.3.0",
     "react": "^17.0.2",
