--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-chat-engine": "^1.11.1",
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^6.0.0-beta.8",
     "react-scripts": "4.0.3",
     "react-select": "^5.0.0",
     "web-vitals": "^1.1.2"
